update ni-button description :pencil2:

--- a/idm241/beta/build.html
+++ b/idm241/beta/build.html
@@ -261,7 +261,7 @@
                 <ul>
                     <li>Text changes to "Interested"</li>
                     <li>Font color changes to a medium gray</li>
-                    <li>Overlay appears over div, blurring and fading the background</li>
+                    <li>Entire div fades to 60% opacity</li>
                 </ul>
             </ul>
             <p>Interested- Active</p>
@@ -278,7 +278,7 @@
                 <ul>
                     <li>Text changes to "Not Interested"</li>
                     <li>Font color changes to turquoise</li>
-                    <li>Overlay disappears, revealing the content underneath</li>
+                    <li>Entire div fades to 60% opacity</li>
                 </ul>
             </ul>
             </div>
