fixed beta img dimensions :hammer:

--- a/idm241/beta/build.html
+++ b/idm241/beta/build.html
@@ -10,7 +10,9 @@
 <body>
     <h1>Beta</h1>
     <div class="build">
-        <img src="book-cover.png" alt="Book Cover">
+        <div class="book-cover">
+            <img src="book-cover.png" alt="Book Cover">
+        </div>
         <div class="wtr-button">
             <button>Want to Read</button>
         </div>
