--- a/idm241/final.html
+++ b/idm241/final.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--link rel="icon" href="alpha.png"-->
     <title>Final</title>
-    <link rel="stylesheet" href="beta/beta.css">
+    <link rel="stylesheet" href="final/final.css">
 </head>
 <body>
     <h1>Final</h1>
