write final description :pencil2:
wrote final description

--- a/idm241/final.html
+++ b/idm241/final.html
@@ -310,10 +310,59 @@
                 <p>None</p>
             </div>
         </div>
+        <div class="modal-description">
+            <h2>Book Description Modal</h2>
+            <div class="modal-triggers">
+            <h3>Triggers</h3>
+            <ul>
+                <li>Hover ON Book Cover</li>
+                <li>Hover OFF Modal and Book Cover</li>
+            </ul>
+            </div>
+            <div class="modal-rules">
+            <h3>Rules</h3>
+            <ul>
+                <li>Hover ON</li>
+                <ul>
+                    <li>Modal with book description fades in</li>
+                </ul>
+                <li>Hover OFF</li>
+                <ul>
+                    <li>Modal with book description fades out</li>
+                </ul>
+            </ul>
+            </div>
+            <div class="modal-feedback">
+            <h3>Feedback</h3>
+            <ul>
+                <li>Hover ON</li>
+                <ul>
+                    <li>Modal with book description fades in</li>
+                </ul>
+                <li>Hover OFF</li>
+                <ul>
+                    <li>Modal with book description fades out</li>
+                </ul>
+            </ul>
+            </div>
+            <div class="ni-loops-and-modes">
+                <h3>Loops &#38; Modes</h3>
+                <ul>
+                    <li>Loops</li>
+                    <li>Modes</li>
+                    <ul>
+                        <li>Hover ON</li>
+                        <ul>
+                            <li>Modal with book description fades in</li>
+                        </ul>
+                    </ul>
+                </ul>
+            </div>
+        </div>
         <div class="video">
             <h2>Video</h2>
-            <video width="300px" controls>
-                <source src="beta-microinteraction.mp4" type="video/mp4">
+            <video width="500px" controls>
+                <source src="final-microinteraction.mp4" type="video/mp4">
             </video>
         </div>
     </div>
