Finalize Final Description :pencil2:
Added description for more and less buttons

--- a/idm241/final.html
+++ b/idm241/final.html
@@ -345,7 +345,7 @@
                 </ul>
             </ul>
             </div>
-            <div class="ni-loops-and-modes">
+            <div class="modal-loops-and-modes">
                 <h3>Loops &#38; Modes</h3>
                 <ul>
                     <li>Loops</li>
@@ -359,53 +359,114 @@
                 </ul>
             </div>
         </div>
-        <div class="modal-description">
-            <h2>Book Description Modal</h2>
-            <div class="modal-triggers">
+        <div class="more-description">
+            <h2>"More" Button</h2>
+            <div class="more-triggers">
             <h3>Triggers</h3>
             <ul>
-                <li>Hover ON Book Cover</li>
-                <li>Hover OFF Modal and Book Cover</li>
+                <li>Hover ON</li>
+                <li>Hover OFF</li>
+                <li>Mouse UP</li>
             </ul>
             </div>
-            <div class="modal-rules">
+            <div class="more-rules">
             <h3>Rules</h3>
             <ul>
                 <li>Hover ON</li>
-                <ul>
-                    <li>Modal with book description fades in</li>
-                </ul>
+                    <ul>
+                        <li>Cursor changes to finger</li>
+                    </ul>
                 <li>Hover OFF</li>
-                <ul>
-                    <li>Modal with book description fades out</li>
-                </ul>
+                    <ul>
+                        <li>Cursor changes to pointer</li>
+                    </ul>
+                <li>Mouse UP</li>
+                    <ul>
+                        <li>Full book description fades in</li>
+                        <li>Description box height grows to fit description</li>
+                        <li>"More" button disappears</li>
+                        <li>"Less" button appears</li>
+                    </ul>
             </ul>
             </div>
-            <div class="modal-feedback">
+            <div class="more-feedback">
             <h3>Feedback</h3>
             <ul>
                 <li>Hover ON</li>
-                <ul>
-                    <li>Modal with book description fades in</li>
-                </ul>
+                    <ul>
+                        <li>Cursor changes to finger</li>
+                    </ul>
                 <li>Hover OFF</li>
-                <ul>
-                    <li>Modal with book description fades out</li>
-                </ul>
+                    <ul>
+                        <li>Cursor changes to pointer</li>
+                    </ul>
+                <li>Mouse UP</li>
+                    <ul>
+                        <li>Full book description fades in</li>
+                        <li>Description box height grows to fit description</li>
+                        <li>"More" button disappears</li>
+                        <li>"Less" button appears</li>
+                    </ul>
             </ul>
             </div>
-            <div class="ni-loops-and-modes">
+            <div class="more-loops-and-modes">
                 <h3>Loops &#38; Modes</h3>
-                <ul>
-                    <li>Loops</li>
-                    <li>Modes</li>
+                <p>none</p>
+            </div>
+        </div>
+        <div class="less-description">
+            <h2>"Less" Button</h2>
+            <div class="more-triggers">
+            <h3>Triggers</h3>
+            <ul>
+                <li>Hover ON</li>
+                <li>Hover OFF</li>
+                <li>Mouse UP</li>
+            </ul>
+            </div>
+            <div class="less-rules">
+            <h3>Rules</h3>
+            <ul>
+                <li>Hover ON</li>
                     <ul>
-                        <li>Hover ON</li>
-                        <ul>
-                            <li>Modal with book description fades in</li>
-                        </ul>
+                        <li>Cursor changes to finger</li>
                     </ul>
-                </ul>
+                <li>Hover OFF</li>
+                    <ul>
+                        <li>Cursor changes to pointer</li>
+                    </ul>
+                <li>Mouse UP</li>
+                    <ul>
+                        <li>Full book description fades into truncated description</li>
+                        <li>Description box height shrinks to fit description</li>
+                        <li>"Less" button disappears</li>
+                        <li>"More" button appears</li>
+                    </ul>
+            </ul>
+            </div>
+            <div class="less-feedback">
+            <h3>Feedback</h3>
+            <ul>
+                <li>Hover ON</li>
+                    <ul>
+                        <li>Cursor changes to finger</li>
+                    </ul>
+                <li>Hover OFF</li>
+                    <ul>
+                        <li>Cursor changes to pointer</li>
+                    </ul>
+                <li>Mouse UP</li>
+                    <ul>
+                        <li>Full book description fades into truncated description</li>
+                        <li>Description box height shrinks to fit description</li>
+                        <li>"Less" button disappears</li>
+                        <li>"More" button appears</li>
+                    </ul>
+            </ul>
+            </div>
+            <div class="less-loops-and-modes">
+                <h3>Loops &#38; Modes</h3>
+                <p>none</p>
             </div>
         </div>
         <div class="video">
