add final build nav :pencil2:
added final build to the index page nav

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="idm241/beta.html"><h2>Beta Description</h2></a>
     <a href="idm241/beta/build.html"><h2>Beta Build</h2></a>
     <a href="idm241/final.html"><h2>Final Description</h2></a>
+    <a href="idm241/final/build.html"><h2>Final Build</h2></a>
     </div>
 </body>
 </html>
