edit description :pencil2:
updated description

--- a/idm241/final/build.html
+++ b/idm241/final/build.html
@@ -286,8 +286,7 @@
                 <li>Mouse UP</li>
                 <ul>
                     <li>Text changes to "Interested"</li>
-                    <li>Font color changes to a medium gray</li>
-                    <li>Overlay appears over div, blurring and fading the background</li>
+                    <li>The rest of the content's opacity fades to 60%</li>
                 </ul>
             </ul>
             <p>Interested- Active</p>
@@ -303,8 +302,7 @@
                 <li>Mouse UP</li>
                 <ul>
                     <li>Text changes to "Not Interested"</li>
-                    <li>Font color changes to turquoise</li>
-                    <li>Overlay disappears, revealing the content underneath</li>
+                    <li>The rest of the content's opacity fades to 100%</li>
                 </ul>
             </ul>
             </div>
@@ -323,8 +321,7 @@
                 <li>Mouse UP</li>
                 <ul>
                     <li>Text changes to "Interested"</li>
-                    <li>Font color changes to a medium gray</li>
-                    <li>Overlay appears over div, blurring and fading the background</li>
+                    <li>The rest of the content's opacity fades to 60%</li>
                 </ul>
             </ul>
             <p>Interested- Active</p>
@@ -340,8 +337,7 @@
                 <li>Mouse UP</li>
                 <ul>
                     <li>Text changes to "Not Interested"</li>
-                    <li>Font color changes to turquoise</li>
-                    <li>Overlay disappears, revealing the content underneath</li>
+                    <li>The rest of the content's opacity fades to 100%</li>
                 </ul>
             </ul>
             </div>
@@ -351,7 +347,7 @@
             </div>
         </div>
         <div class="modal-description">
-            <h2>Book Description Modal</h2>
+            <h2>Book Cover</h2>
             <div class="modal-triggers">
             <h3>Triggers</h3>
             <ul>
@@ -422,10 +418,9 @@
                     </ul>
                 <li>Mouse UP</li>
                     <ul>
-                        <li>Full book description fades in</li>
-                        <li>Description box height grows to fit description</li>
-                        <li>"More" button disappears</li>
-                        <li>"Less" button appears</li>
+                        <li>Full book description is revealed</li>
+                        <li>Description box height grows to fit full description</li>
+                        <li>"...more" button's text changes to "hide"</li>
                     </ul>
             </ul>
             </div>
@@ -442,10 +437,9 @@
                     </ul>
                 <li>Mouse UP</li>
                     <ul>
-                        <li>Full book description fades in</li>
-                        <li>Description box height grows to fit description</li>
-                        <li>"More" button disappears</li>
-                        <li>"Less" button appears</li>
+                        <li>Full book description is revealed</li>
+                        <li>Description box height grows to fit full description</li>
+                        <li>"...more" button's text changes to "hide"</li>
                     </ul>
             </ul>
             </div>
@@ -455,7 +449,7 @@
             </div>
         </div>
         <div class="less-description">
-            <h2>"Less" Button</h2>
+            <h2>"Hide" Button</h2>
             <div class="more-triggers">
             <h3>Triggers</h3>
             <ul>
@@ -477,10 +471,8 @@
                     </ul>
                 <li>Mouse UP</li>
                     <ul>
-                        <li>Full book description fades into truncated description</li>
-                        <li>Description box height shrinks to fit description</li>
-                        <li>"Less" button disappears</li>
-                        <li>"More" button appears</li>
+                        <li>Modal closes</li>
+                        <li>Full book description shortens into truncated description</li>
                     </ul>
             </ul>
             </div>
@@ -497,10 +489,7 @@
                     </ul>
                 <li>Mouse UP</li>
                     <ul>
-                        <li>Full book description fades into truncated description</li>
-                        <li>Description box height shrinks to fit description</li>
-                        <li>"Less" button disappears</li>
-                        <li>"More" button appears</li>
+                        <li>Modal closes</li>
                     </ul>
             </ul>
             </div>
