update "hide" descriptioin :pencil2:
Corrected description for "hide" button

--- a/idm241/final/build.html
+++ b/idm241/final/build.html
@@ -471,8 +471,8 @@
                     </ul>
                 <li>Mouse UP</li>
                     <ul>
-                        <li>Modal closes</li>
                         <li>Full book description shortens into truncated description</li>
+                        <li>Modal closes</li>
                     </ul>
             </ul>
             </div>
@@ -489,6 +489,7 @@
                     </ul>
                 <li>Mouse UP</li>
                     <ul>
+                        <li>Full book description shortens into truncated description</li>
                         <li>Modal closes</li>
                     </ul>
             </ul>
