Add Hover on NI Button 💄

--- a/idm241/final/build.html
+++ b/idm241/final/build.html
@@ -81,7 +81,6 @@
                         <li>Button color fades to light gray</li>
                         <li>Text color fades to black</li>
                     </ul>
-                </ul>
             </ul>
             <p>Want to Read- Active</p>
             <ul>
@@ -121,7 +120,6 @@
                         <li>Button color fades to light gray</li>
                         <li>Text color fades to black</li>
                     </ul>
-                </ul>
             </ul>
             <p>Want to Read- Active</p>
             <ul>
@@ -278,10 +276,12 @@
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
+                    <li>Text fades darker</li>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
                     <li>Cursor changes to pointer</li>
+                    <li>Text fades to default</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
@@ -294,10 +294,12 @@
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
+                    <li>Text fades darker</li>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
                     <li>Cursor changes to pointer</li>
+                    <li>Text fades to default</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
@@ -313,10 +315,12 @@
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
+                    <li>Text fades darker</li>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
                     <li>Cursor changes to pointer</li>
+                    <li>Text fades to default</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
@@ -329,10 +333,12 @@
                 <li>Hover ON</li>
                 <ul>
                     <li>Cursor changes to finger</li>
+                    <li>Text fades darker</li>
                 </ul>
                 <li>Hover OFF</li>
                 <ul>
                     <li>Cursor changes to pointer</li>
+                    <li>Text fades to default</li>
                 </ul>
                 <li>Mouse UP</li>
                 <ul>
