--- a/idm241/final/build.html
+++ b/idm241/final/build.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1>Final</h1>
-    <div class="build">
-        <div class="ni-overlay">
+    <div class="builds">
+        <div class="build">
             <div class="book-cover">
                 <div class="book-cover-img">
                     <img src="book-cover.png" alt="Book Cover">
@@ -21,9 +21,9 @@
                         <h5>By: J.K. Rowling</h5>
                         <img src="rating.png" alt="Star Rating">
                     </div>
-                    <p> 4 star avg. rating - 10,482,583 ratings </p>
+                        <p> 4 star avg. rating - 10,482,583 ratings </p>
                     <div class="truncated-text">
-                    <p>Harry Potter has never even heard of Hogwarts when the letters start dropping on the doormat at number four, Privet Drive. Addressed in green ink on yellowish parchment with a purple seal, they are swiftly confiscated by his grisly aunt and uncle. Then, on Harry's eleventh birthday, a great beetle-eyed giant of a man called Rubeus Hagrid bursts in with some astonishing news: Harry Potter is a wizard, and he has a place at Hogwarts School of Witchcraft and Wizardry. An incredible adventure is about to begin!</p>
+                        <p>Harry Potter has never even heard of Hogwarts when the letters start dropping on the doormat at number four, Privet Drive. Addressed in green ink on yellowish parchment with a purple seal, they are swiftly confiscated by his grisly aunt and uncle. Then, on Harry's eleventh birthday, a great beetle-eyed giant of a man called Rubeus Hagrid bursts in with some astonishing news: Harry Potter is a wizard, and he has a place at Hogwarts School of Witchcraft and Wizardry. An incredible adventure is about to begin!</p>
                     </div>
                     <button>...more</button>
                 </div>
@@ -31,17 +31,69 @@
             <div class="wtr-button">
                 <button>Want to Read</button>
             </div>
-            <div class="star-rating" id="starRating">
+            <div class="star-rating">
                 <!-- SVG star icons for the rating system -->
-                <div class="star" data-rating="1"></div>
-                <div class="star" data-rating="2"></div>
-                <div class="star" data-rating="3"></div>
-                <div class="star" data-rating="4"></div>
-                <div class="star" data-rating="5"></div>
+                <span class="star" data-rating="1"></span>
+                <span class="star" data-rating="2"></span>
+                <span class="star" data-rating="3"></span>
+                <span class="star" data-rating="4"></span>
+                <span class="star" data-rating="5"></span>
+            </div>
+            <div class="ni-overlay">
+                <div class="ni-box">
+                    <p>&nbsp;</p>
+                </div>
+                    <button class="ni-button">Not Interested</button>
             </div>
         </div>
-        <div class="ni-button">
-            <button>Not Interested</button>
+        <div class="build">
+            <div class="book-cover">
+                <div class="book-cover-img">
+                    <img src="book-cover2.png" alt="Book Cover">
+                </div>
+                <div class="book-description">
+                    <h4>Harry Potter and the Chamber of Secrets</h4>
+                    <div class="avg-rating">
+                        <h5>By: J.K. Rowling</h5>
+                        <img src="rating.png" alt="Star Rating">
+                    </div>
+                    <p> 4 star avg. rating - 8,639,447 ratings </p>
+                    <div class="truncated-text">
+                    <p>Ever since Harry Potter had come home for the summer, the Dursleys had been so mean and hideous that all Harry wanted was to get back to the Hogwarts School for Witchcraft and Wizardry. But just as he&#39;s packing his bags, Harry receives a warning from a strange impish creature who says that if Harry returns to Hogwarts, disaster will strike.. And strike it does. For in Harry&#39;s second year at Hogwarts, fresh torments and horrors arise. Could it be Draco Malfoy? Could it possibly be Hagrid? Or could it be the one everyone at Hogwarts most suspects… Harry Potter himself!
+                    </p>
+                    </div>
+                    <button>...more</button>
+                </div>
+            </div>
+            <div class="wtr-button">
+                <button>Want to Read</button>
+            </div>
+            <div class="star-rating">
+                <!-- SVG star icons for the rating system -->
+                <span class="star" data-rating="1"></span>
+                <span class="star" data-rating="2"></span>
+                <span class="star" data-rating="3"></span>
+                <span class="star" data-rating="4"></span>
+                <span class="star" data-rating="5"></span>
+            </div>
+            <div class="ni-overlay">
+                <div class="ni-box">
+                    <p>&nbsp;</p>
+                </div>
+                    <button class="ni-button">Not Interested</button>
+            </div>
+        </div>
+        <div class="book-description">
+            <h4>Harry Potter and the Chamber of Secrets</h4>
+            <div class="avg-rating">
+                <h5>By: J.K. Rowling</h5>
+                <img src="rating.png" alt="Star Rating">
+            </div>
+            <p> 4 star avg. rating - 8,639,447 ratings </p>
+            <div class="truncated-text">
+            <p>Ever since Harry Potter had come home for the summer, the Dursleys had been so mean and hideous that all Harry wanted was to get back to the Hogwarts School for Witchcraft and Wizardry. But just as he&#39;s packing his bags, Harry receives a warning from a strange impish creature who says that if Harry returns to Hogwarts, disaster will strike.</p>
+            </div>
+            <button>...more</button>
         </div>
     </div>
     <div class="descriptions">
