--- a/idm241/final/build.html
+++ b/idm241/final/build.html
@@ -549,7 +549,7 @@
             </div>
             <div class="more-loops-and-modes">
                 <h3>Loops &#38; Modes</h3>
-                <p>none</p>
+                <p>None</p>
             </div>
         </div>
     </div>
