--- a/idm241/final/build.html
+++ b/idm241/final/build.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Final</h1>
+    <div class="title">
+        <a href="https://www.goodreads.com/recommendations" target="_blank"><h3>Original Goodreads Interactive Div</h3></a>
+    </div>
     <div class="builds">
         <div class="build">
             <div class="book-cover">
