--- a/idm241/case-study.html
+++ b/idm241/case-study.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="final/book.png">
     <title>Case Study</title>
-    <link rel="stylesheet" href="../final/final.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <div class="case-study">
-    <h1>Case Study</h1>
+        <h1>Case Study</h1>
+        <div class="hero">
+            <img src="case-study-hero.gif" alt="IDM241 Project Preview" height="750px">
+        </div>
     </div>
 </body>
 </html>
