insert hero gif ✏️

--- a/idm241/case-study.html
+++ b/idm241/case-study.html
@@ -11,7 +11,9 @@
     <div class="case-study">
         <h1>Case Study</h1>
         <div class="hero">
-            <img src="case-study-hero.gif" alt="IDM241 Project Preview" height="750px">
+            <video controls>
+                <source src="project-preview.mp4" type="video/mp4">
+            </video>
         </div>
     </div>
 </body>
